# .github

./: .license-tools-config.json  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  noxfile.py  ruff.toml
.github/: SECURITY.md  SUPPORT.md  pull_request_template.md  release-drafter.yml  renovate.json5
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: release-drafter.yml  templating.yml
docs/: ai_usage.md  conf.py  index.md  lit_header.bib  logos.md  overview.md  refs.bib  requirements.txt  stats.md
docs/_static/: custom.css  logos.css
docs/handbook/: 01_intro.md  03_compilation.md  04_verification.md  05_benchmarking.md  references.md
profile/: README.md
templating/: Dockerfile  action.Dockerfile  action.yml
templating/src/: run.py
templating/templates/: pull_request_template.md
tutorial/: 01_simulation.ipynb  02_compilation.ipynb  03_verification.ipynb  04_device_selection.ipynb  README.md  pyproject.toml
