[project]
name = "sc25-mqt-tutorial"
version = "1.0.0"
description = "Hands-on tutorial at SC25"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mqt-bench>=2.1.0",
    "mqt-ddsim>=2.1.0",
    "mqt-qcec>=3.3.0",
    "mqt-qmap>=3.4.0",
    "qiskit[visualization]>=1.2.4",
    "matplotlib>=3.9.2",
    "pylatexenc>=2.10",
]
